@@ -51,8 +51,7 @@ public class RangeReader {
      * @param representation
      *            Representation to update.
      */
-    public static void update(String value,
-            Representation representation) {
+    public static void update(String value, Representation representation) {
         String prefix = "bytes ";
         if (value != null && value.startsWith(prefix)) {
             value = value.substring(prefix.length());
@@ -61,8 +60,9 @@ public class RangeReader {
             int index1 = value.indexOf("/");
 
             if (index != -1) {
-                int startIndex = Integer.parseInt(value.substring(0, index));
-                int endIndex = Integer.parseInt(value.substring(index + 1,
+                long startIndex = (index == 0) ? Range.INDEX_LAST : Long
+                        .parseLong(value.substring(0, index));
+                long endIndex = Long.parseLong(value.substring(index + 1,
                         index1));
 
                 representation.setRange(new Range(startIndex, endIndex
